--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -164,8 +164,8 @@
                                 tagValueId = firstTagValue.TagValueId, elementAttributeId = elementAttribute.ElementAttributeId) }}">
                                 <span class="glyphicon glyphicon-comment"></span></a></td>
                         <td><a class = "btn btn-default" title = "Edit Last Value"
-                            href = "{{ url_for("elementAttributes.editElementAttributeValue", elementId = elementAttribute.ElementId,
-                            tagValueId = firstTagValue.TagValueId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
+                            href = "{{ url_for("tagValues.editTagValue", tagValueId = firstTagValue.TagValueId,
+                            elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
                         <td><a class = "btn btn-default" title = "Delete Last Value"
                             href = "{{ url_for("elementAttributes.deleteElementAttributeValue",
                             elementId = elementAttribute.ElementId, tagValueId = firstTagValue.TagValueId) }}"><span class="glyphicon glyphicon-trash"></span>
