--- a/app/templates/addEditModel.html
+++ b/app/templates/addEditModel.html
@@ -22,8 +22,11 @@
 {% block scripts %}
     {{ super() }}
     <script>
-        $("#submit").hide()
-        $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Save\" type = \"submit\">" +
-            "<span class = \"glyphicon glyphicon-floppy-disk\" aria-hidden = \"true\"></span></button>")
+        $(document).ready(function()
+        {
+            $("#submit").hide()
+            $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Save\" type = \"submit\">" +
+                "<span class = \"glyphicon glyphicon-floppy-disk\" aria-hidden = \"true\"></span></button>")
+        })
     </script>
 {% endblock %}
