--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -44,13 +44,16 @@ Import {{ importing }}
 {% block scripts %}
     {{ super() }}
     <script>
-        $("#submit").click(function() {
-            alert("Performing an import can take several minutes dependent on the size of the data being imported. Do not leave this page until a success or " +
-                "failure message is returned.")
-        })
+        $(document).ready(function()
+        {
+            $("#submit").click(function() {
+                alert("Performing an import can take several minutes dependent on the size of the data being imported. Do not leave this page until a " +
+                    "success or failure message is returned.")
+            })
 
-        $("#submit").hide()
-        $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Import\" type = \"submit\">" +
-            "<span class = \"glyphicon glyphicon-import\" aria-hidden = \"true\"></span></button>")
+            $("#submit").hide()
+            $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Import\" type = \"submit\">" +
+                "<span class = \"glyphicon glyphicon-import\" aria-hidden = \"true\"></span></button>")
+        })
     </script>
 {% endblock %}
