--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -110,23 +110,26 @@ Data Entry - Event Frames
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
     <script>
-        $('#table').DataTable
-        ({
-            "order":
-            [
-                [2, "desc"],    // Start timestamp.
-                [1, "asc"]      // Name.
-            ],
-            "columns":
-            [
-                null,
-                null,
-                null,
-                null
-            ],
-            "stateSave": true,
-            "stateDuration": 0,
-            "pageLength": 25
-        });
+        $(document).ready(function()
+        {
+            $('#table').DataTable
+            ({
+                "order":
+                [
+                    [2, "desc"],    // Start timestamp.
+                    [1, "asc"]      // Name.
+                ],
+                "columns":
+                [
+                    null,
+                    null,
+                    null,
+                    null
+                ],
+                "stateSave": true,
+                "stateDuration": 0,
+                "pageLength": 25
+            })
+        })
     </script>
 {% endblock %}
