--- a/app/templates/lookups/select.html
+++ b/app/templates/lookups/select.html
@@ -89,23 +89,26 @@ Lookups
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
     <script>
-        $('#lookupsTable').DataTable
-        ({
-            "order":
-            [
-                [1, 'asc'],             // Name.
-            ],
-            "columns":
-            [
-                { "orderable": false }, // Select button.
-                null,
-                null,
-                { "orderable": false }, // Edit button.
-                { "orderable": false }  // Delete button.
-            ],
-            "stateSave": true,
-            "stateDuration": 0,
-            "pageLength": 25
+        $(document).ready(function()
+        {
+            $('#lookupsTable').DataTable
+            ({
+                "order":
+                [
+                    [1, 'asc'],             // Name.
+                ],
+                "columns":
+                [
+                    { "orderable": false }, // Select button.
+                    null,
+                    null,
+                    { "orderable": false }, // Edit button.
+                    { "orderable": false }  // Delete button.
+                ],
+                "stateSave": true,
+                "stateDuration": 0,
+                "pageLength": 25
+            })
         })
     </script>
 {% endblock %}
