--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -303,6 +303,7 @@
             $(document).keypress(function(event) {
                 if (event.which == 13)
                 {
+                    $("#buttonAttributesSaveAll").focus()
                     $("#buttonAttributesSaveAll").click()
                 }
             })
