--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -12,12 +12,12 @@ Data Entry - Elements
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
             {% set tableHeader = "Enterprise" %}
-            {% set pageHeaderSubText = "Select an Enterprise" %}
+            {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Site" %}
-            {% set pageHeaderSubText = "Select a Site" %}
+            {% set pageHeaderSubText = "Sites" %}
         <!-- "and parent" checks for systems that have not been configured with a site yet. -->
         {% elif childrenClass == "ElementTemplate" and parent %}
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
@@ -25,7 +25,16 @@ Data Entry - Elements
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Element Template" %}
-            {% set pageHeaderSubText = "Select an Element Template" %}
+            {% set pageHeaderSubText = "Element Templates" %}
+        {% elif childrenClass == "ElementAttributeTemplate" %}
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Enterprise",
+                selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Site",
+                selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
+            <li class = "active">{{ parent.Name }}</li>
+            {% set tableHeader = "Element Attribute Template" %}
+            {% set pageHeaderSubText = "" %}
         {% elif childrenClass == "Element" %}
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Enterprise",
@@ -34,7 +43,7 @@ Data Entry - Elements
                 selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Element" %}
-            {% set pageHeaderSubText = "Select an Element" %}
+            {% set pageHeaderSubText = "" %}
         {% endif %}
     </ol>
 </div>
@@ -45,6 +54,12 @@ Data Entry - Elements
     {% if childrenClass == "Element" %}
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("elements.addElement", elementTemplateId = parent.id()) }}" role = "button">
             <span class="glyphicon glyphicon-plus"></span></a>
+    {% elif childrenClass == "ElementAttributeTemplate" %}
+        <a class = "btn btn-default" title = "Add Element Attribute Template" href = "{{ url_for("elementAttributeTemplates.addElementAttributeTemplate",
+            elementTemplateId = parent.id()) }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
+    {% elif childrenClass == "ElementTemplate" %}
+        <a class = "btn btn-default" title = "Add Element Template" href = "{{ url_for("elementTemplates.addElementTemplate", siteId = parent.id()) }}"
+            role = "button"><span class="glyphicon glyphicon-plus"></span></a>
     {% endif %}
     <br><br>
     <table id = "table" class = "table">
@@ -65,6 +80,8 @@ Data Entry - Elements
                         {% if childrenClass == "Element" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("elements.dashboard",
                                 elementId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                        {% elif childrenClass == "ElementAttributeTemplate" %}
+                            <td></td>
                         {% else %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("elements.selectElement",
                                 selectedClass = child.__class__.__name__, selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
@@ -78,6 +95,19 @@ Data Entry - Elements
                                 <span class="glyphicon glyphicon-edit"></span></a></td>
                             <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elements.deleteElement", elementId = child.ElementId) }}">
                                 <span class="glyphicon glyphicon-trash"></span></a></td>
+                        {% elif childrenClass == "ElementAttributeTemplate" %}
+                            <td></td>
+                            <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("elementAttributeTemplates.editElementAttributeTemplate",
+                                elementAttributeTemplateId = child.id()) }}"><span class="glyphicon glyphicon-edit"></a></td>
+                            <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elementAttributeTemplates.deleteElementAttributeTemplate",
+                                elementAttributeTemplateId = child.id()) }}"><span class="glyphicon glyphicon-trash"></a></td>
+                        {% elif childrenClass == "ElementTemplate" %}
+                            <td><a class = "btn btn-default" title = "Associate Attributes with Element" href = "{{ url_for("elements.selectElement",
+                                selectedClass = "ElementAttributeTemplate", selectedId = child.id()) }}"><span class="glyphicon glyphicon-link"></a></td>
+                            <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("elementTemplates.editElementTemplate",
+                                elementTemplateId = child.id()) }}"><span class="glyphicon glyphicon-edit"></a></td>
+                            <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elementTemplates.deleteElementTemplate",
+                                elementTemplateId = child.id()) }}"><span class="glyphicon glyphicon-trash"></a></td>
                         {% else %}
                             <td></td>
                             <td></td>
