--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -3,7 +3,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Data Entry - Event Frames
+Event Frames
 {% endblock %}
 
 {% block page_content %}
@@ -12,7 +12,7 @@ Data Entry - Event Frames
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
             {% set tableHeader = "Enterprise" %}
-            {% set pageHeaderSubText = "Select an Enterprise" %}
+            {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
             <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
@@ -26,7 +26,28 @@ Data Entry - Event Frames
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Element Template" %}
             {% set pageHeaderSubText = "Element Templates" %}
-        {% elif childrenClass == "Element" %}
+        {% elif childrenClass == "EventFrameTemplate" %}
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
+                selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
+                selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
+            <li class = "active">{{ parent.Name }}</li>
+            {% set tableHeader = "Event Frame Template" %}
+            {% set pageHeaderSubText = "Event Frame Templates" %}
+        {% elif childrenClass == "EventFrame" %}
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
+                selectedId = parent.ElementTemplate.Site.Enterprise.id()) }}">{{ parent.ElementTemplate.Site.Enterprise.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
+                selectedId = parent.ElementTemplate.Site.id()) }}">{{ parent.ElementTemplate.Site.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
+                selectedId = parent.ElementTemplate.id()) }}">{{ parent.ElementTemplate.Name }}</a></li>
+            <li class = "active">{{ parent.Name }}</li>
+            {% set tableHeader = "Event Frame" %}
+            {% set pageHeaderSubText = "" %}
+        {% endif %}
+        <!-- {#% elif childrenClass == "Element" %}
             <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
                 selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
@@ -59,20 +80,32 @@ Data Entry - Event Frames
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Event Frame" %}
             {% set pageHeaderSubText = "" %}
-        {% endif %}
+        {% endif %#} -->
     </ol>
 </div>
 <div class = "page-header">
     <h1>Event Frames <small>{{ pageHeaderSubText }}</small></h1>
 </div>
 <div>
+    {% if childrenClass == "EventFrameTemplate" %}
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameTemplates.addEventFrameTemplate",
+            elementTemplateId = parent.id()) }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
+    {% elif childrenClass == "DescendantEventFrameTemplate" %}
+    {% endif %}
+    <br><br>
     <table id = "table" class = "table">
         <thead>
             <tr>
                 <th></th>
                 <th>{{ tableHeader }}</th>
-                <th>Start Timestamp</th>
-                <th>End Timestamp</th>
+                {% if childrenClass == "Enterprise" or childrenClass == "Site" or childrenClass == "ElementTemplate" %}
+                    <th>Description</th>
+                {% elif childrenClass == "EventFrameTemplate" %}
+                    <th>Description</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -83,20 +116,42 @@ Data Entry - Event Frames
                             {% set name = child.friendlyName() %}
                         {% else %}
                             {% set name = child.Name %}
+                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.selectEventFrame",
+                                selectedClass = child.__class__.__name__, selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         {% endif %}
-                        {% if childrenClass == "EventFrame" %}
+                        {% if childrenClass == "Enterprise" or childrenClass == "Site" or childrenClass == "ElementTemplate" %}
+                            <td>{{ child.Name }}</td>
+                            <td>{{ child.Description }}</td>
+                        {% elif childrenClass == "EventFrameTemplate" %}
+                            <td>{{ child.Name }}</td>
+                            <td>{{ child.Description }}</td>
+                            <td><a class = "btn btn-default" title = "Edit" href = "{#{ url_for("eventFrameTemplates.editEventFrameTemplate",
+                                eventFrameTemplateId = child.id()) }#}"><span class="glyphicon glyphicon-link"></a></td>
+                            <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
+                                eventFrameTemplateId = child.id()) }}"><span class="glyphicon glyphicon-edit"></a></td>
+                            <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
+                                eventFrameTemplateId = child.id()) }}"><span class="glyphicon glyphicon-trash"></a></td>                        
+                        {% endif %}
+                        <!-- {#% if childrenClass == "EventFrame" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard", eventFrameId = child.id(),
                                 selectedEventFrameTemplateId = child.EventFrameTemplateId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
-                        {% elif childrenClass == "EventFrameTemplate" %}
-                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrame",
-                                selectedId = child.id(), elementId = parent.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         {% else %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.selectEventFrame",
                                 selectedClass = child.__class__.__name__, selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         {% endif %}
+                        {% if childrenClass == "EventFrame" %}
+                            {% set name = child.friendlyName() %}
+                        {% else %}
+                            {% set name = child.Name %}
+                        {% endif %}
                         <td>{{ name }}</td>
-                        <td>{{ child.StartTimestamp }}</td>
-                        <td>{{ child.EndTimestamp }}</td>
+                        {% if childrenClass == "EventFrame" %}
+                            <td>{{ child.Element.Name }}</td>
+                            <td>{{ child.StartTimestamp }}</td>
+                            <td>{{ child.EndTimestamp }}</td>
+                        {% else %}
+                            <td>{{ child.Description }}</td>
+                        {% endif %#} -->
                     </tr>
                 {% endfor %}
             {% endif %}
@@ -116,15 +171,25 @@ Data Entry - Event Frames
             ({
                 "order":
                 [
-                    [2, "desc"],    // Start timestamp.
-                    [1, "asc"]      // Name.
+                    {% if childrenClass == "Enterprise" or childrenClass == "Site" or childrenClass == "ElementTemplate" %}
+                        [1, "asc"]              // Name.
+                    {% elif childrenClass == "EventFrameTemplate" %}
+                        [1, "asc"]              // Name.
+                    {% endif %}
                 ],
                 "columns":
                 [
-                    null,
-                    null,
-                    null,
-                    null
+                    { "orderable": false },     // Select button.
+                    {% if childrenClass == "Enterprise" or childrenClass == "Site" or childrenClass == "ElementTemplate" %}
+                        null,
+                        null
+                    {% elif childrenClass == "EventFrameTemplate" %}
+                        null,
+                        null,
+                        { "orderable": false }, // Associate button.
+                        { "orderable": false }, // Edit button.
+                        { "orderable": false }  // Delete button.
+                    {% endif %}
                 ],
                 "stateSave": true,
                 "stateDuration": 0,
