--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -26,6 +26,8 @@ Event Frame Dashboard
     <h1>Event Frame Notes <small>{{ eventFrame.Element.Name }}</small></h1>
 </div>
 <div>
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameNotes.addEventFrameNote", eventFrameId = eventFrame.id()) }}" role = "button">
+        <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "table" class = "table">
         <thead>
